Add login specs and update endpoint to follow OA2 specifications
