# swagger_server/resources/user.py
@@ -4,9 +4,13 @@ from models.user import User
 from marshmallow import Schema, fields
 
 
-class UserPostSchema(Schema):
+class UserCredentialsSchema(Schema):
     username = fields.Str(required=True)
     password = fields.Str(required=True)
+
+
+class UserPostSchema(Schema):
+    credentials = fields.Nested(UserCredentialsSchema)
 
 
 class UserResource(Resource):
@@ -17,8 +21,8 @@ class UserResource(Resource):
             abort(400, str(errors))
 
         body = schema.dump(request.json)
-        user = User.find_by_username(body['username'])
-        if user is None or user.password != body['password']:
+        user = User.find_by_username(body['credentials']['username'])
+        if user is None or user.password != body['credentials']['password']:
             abort(401, 'Incorrect username or password')
 
         return {'success': True}, 200, {'Set-Cookie': 'userId={}'.format(user.id)}
